--- a/Gwangju/UpComming/index.html
+++ b/Gwangju/UpComming/index.html
@@ -23,18 +23,35 @@
     <div class="window2">
         <div class="slider2">
             <div class="slide" style="background-color: aquamarine;">
+                <p>1</p>
                 <label for="slide2" class="nextBtn btn2">다음2</label>
                 <label for="slide3" class="prevBtn btn6">이전3</label>
             </div>
             <div class="slide" style="background-color: aqua;">
+                <p>2</p>
                 <label for="slide3" class="nextBtn btn3">다음3</label>
                 <label for="slide1" class="prevBtn btn4">이전1</label>
             </div>
             <div class="slide" style="background-color: darkturquoise;">
+                <p>3</p>
                 <label for="slide1" class="nextBtn btn1">다음1</label>
                 <label for="slide2" class="prevBtn btn5">이전2</label>
             </div>
-            <div class="slide" style="background-color: aquamarine;"></div>
+            <div class="slide" style="background-color: aquamarine;">
+                <p>1</p>
+                <label for="slide2" class="nextBtn btn2">다음2</label>
+                <label for="slide3" class="prevBtn btn6">이전3</label>
+            </div>
+            <div class="slide" style="background-color: aqua;">
+                <p>2</p>
+                <label for="slide3" class="nextBtn btn3">다음3</label>
+                <label for="slide1" class="prevBtn btn4">이전1</label>
+            </div>
+            <div class="slide" style="background-color: darkturquoise;">
+                <p>3</p>
+                <label for="slide1" class="nextBtn btn1">다음1</label>
+                <label for="slide2" class="prevBtn btn5">이전2</label>
+            </div>
         </div>
     </div>
 
