test : Tab menu test false

--- a/Gyeonggi/course_introduce/index.html
+++ b/Gyeonggi/course_introduce/index.html
@@ -7,8 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-
+    <div class="tab_menu">
+        <ul>
+            <li class="on">
+                <button class="btn">도보</button>
+                <div class="content">도보 컨텐츠</div>
+            </li>
+            <li>
+                <button class="btn">자전거</button>
+                <div class="content">자전거 컨텐츠</div>
+            </li>
+        </ul>
+    </div>
 
     <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="index.js"></script>
