feat : Setting json

--- a/Gyeonggi/course_introduce/index.html
+++ b/Gyeonggi/course_introduce/index.html
@@ -44,6 +44,10 @@
         </div>
     </main>
 
+    <div class="map-container" id="mapContainer">
+        <img src="img/경복궁.png" alt="">
+    </div>
+
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="index.js"></script>
 </body>
