feat : Load json

--- a/Gyeonggi/course_introduce/index.html
+++ b/Gyeonggi/course_introduce/index.html
@@ -45,7 +45,7 @@
     </main>
 
     <div class="map-container" id="mapContainer">
-        <img src="img/경복궁.png" alt="">
+        <img src="img/창덕궁.png" alt="">
     </div>
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
