--- a/Gyeonggi/course_introduce/index.html
+++ b/Gyeonggi/course_introduce/index.html
@@ -50,7 +50,7 @@
             </div>
             </div>
             <div class="route-list" id="routeList">
-                <!-- 이동시간 리스트가 여기 표시됩니다 -->
+                <!-- 이동시간 리스트 여기 표시 -->
             </div>
     </main>
 
