feat : Create worle cloud text

--- a/Daejeon/keyword/index.html
+++ b/Daejeon/keyword/index.html
@@ -4,121 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Word Cloud</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-        }
-        #word-cloud {
-            width: 600px;
-            height: 600px;
-            position: relative;
-            border: 1px solid #000;
-            overflow: hidden;
-        }
-        .word {
-            position: absolute;
-            white-space: nowrap;
-            font-family: Arial, sans-serif;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="word-cloud"></div>
 
-    <script>
-        const data = [
-            {"word": "경북여행", "frequency": "55852"},
-            {"word": "후기", "frequency": "37088"},
-            {"word": "경북", "frequency": "31322"},
-            {"word": "추천", "frequency": "9314"},
-            {"word": "맛집추천", "frequency": "8330"},
-            {"word": "호텔", "frequency": "6879"},
-            {"word": "경주", "frequency": "6286"},
-            {"word": "여행지", "frequency": "5732"},
-            {"word": "숙소", "frequency": "5732"},
-            {"word": "울릉도", "frequency": "4650"},
-            {"word": "유네스코", "frequency": "4807"},
-            {"word": "독도", "frequency": "3292"},
-            {"word": "펜션", "frequency": "3088"},
-            {"word": "문화유산", "frequency": "3074"},
-            {"word": "경북축제", "frequency": "3180"},
-            {"word": "황리단길", "frequency": "2872"},
-            {"word": "주산지", "frequency": "2583"},
-            {"word": "코스", "frequency": "2347"},
-            {"word": "등산코스", "frequency": "2314"},
-            {"word": "내돈내산", "frequency": "2236"},
-            {"word": "리조트", "frequency": "2171"},
-            {"word": "주왕산", "frequency": "2059"},
-            {"word": "영주", "frequency": "1983"},
-            {"word": "가족", "frequency": "1911"},
-            {"word": "이용", "frequency": "1871"},
-            {"word": "예약", "frequency": "1783"},
-            {"word": "사진", "frequency": "1775"},
-            {"word": "숙박", "frequency": "1723"},
-            {"word": "부석사", "frequency": "1529"},
-            {"word": "블로그", "frequency": "1434"}
-        ];
-
-        const wordCloud = document.getElementById('word-cloud');
-        data.sort((a, b) => b.frequency - a.frequency);
-
-        const maxFontSize = 64;
-        const minFontSize = 12;
-        const centerX = wordCloud.clientWidth / 2;
-        const centerY = wordCloud.clientHeight / 2;
-
-        function placeWord(wordElement, x, y) {
-            wordElement.style.left = `${x}px`;
-            wordElement.style.top = `${y}px`;
-        }
-
-        function isOverlap(wordElement) {
-            const words = document.querySelectorAll('.word');
-            for (let word of words) {
-                if (word !== wordElement) {
-                    const rect1 = word.getBoundingClientRect();
-                    const rect2 = wordElement.getBoundingClientRect();
-                    if (!(rect2.right < rect1.left || rect2.left > rect1.right || rect2.bottom < rect1.top || rect2.top > rect1.bottom)) {
-                        return true;
-                    }
-                }
-            }
-            return false;
-        }
-
-        function findPosition(wordElement, angle, distance) {
-            const x = centerX + Math.cos(angle) * distance - wordElement.offsetWidth / 2;
-            const y = centerY + Math.sin(angle) * distance - wordElement.offsetHeight / 2;
-            return { x, y };
-        }
-
-        let angleIncrement = (2 * Math.PI) / data.length;
-        let angle = 0;
-        let distanceIncrement = 10;
-        let distance = 0;
-
-        data.forEach((item, index) => {
-            const fontSize = maxFontSize - (index * 2);
-            const wordElement = document.createElement('div');
-            wordElement.classList.add('word');
-            wordElement.style.fontSize = `${fontSize > minFontSize ? fontSize : minFontSize}px`;
-            wordElement.textContent = item.word;
-            wordCloud.appendChild(wordElement);
-
-            distance = 0;
-            do {
-                const { x, y } = findPosition(wordElement, angle, distance);
-                placeWord(wordElement, x, y);
-                distance += distanceIncrement;
-            } while (isOverlap(wordElement));
-
-            angle += angleIncrement;
-        });
-    </script>
+    <script src="index.js"></script>
 </body>
 </html>
