feat : Clear word cloud

--- a/Daejeon/keyword/index.html
+++ b/Daejeon/keyword/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="word-cloud"></div>
+    <div class="winodw">
+        <div id="word-cloud"></div>
+    </div>
 
     <script src="index.js"></script>
 </body>
