test : Test popup

--- a/Daejeon/keyword/index.html
+++ b/Daejeon/keyword/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="winodw">
+    <div class="window">
         <div id="word-cloud"></div>
+        <div id="popup" class="popup"></div>
     </div>
 
     <script src="index.js"></script>
