--- a/Daejeon/keyword/index.html
+++ b/Daejeon/keyword/index.html
@@ -11,6 +11,7 @@
         <div id="word-cloud"></div>
         <div id="popup" class="popup"></div>
     </div>
+    <div id="table-container"></div>
 
     <script src="index.js"></script>
 </body>
