--- a/Gwangju/best_festival/index.html
+++ b/Gwangju/best_festival/index.html
@@ -19,39 +19,45 @@
         </div>
         <img src="maps/kr.svg" alt="">
     
-        <div class="content">
-            <div class="card">
-                <h3>인천 <span>중구(인천관광공사)</span></h3>
-                <p>축제명 : 인천머시기축제</p>
-                <p>축제 유형 : 전통역사</p>
-                <p>개최 기간 : <br> 2024-09-04 ~ 2024-09-07</p>
+        <div class="content_window">
+            <div class="content">
+                <div class="card">
+                    <h3>인천 <span>중구(인천관광공사)</span></h3>
+                    <p>축제명 : 인천머시기축제</p>
+                    <p>축제 유형 : 전통역사</p>
+                    <p>개최 기간 : <br> 2024-09-04 ~ 2024-09-07</p>
+                    <button>더보기</button>
+                </div>
+                <div class="card">
+                    <h3>서울</h3>
+                    <p>축제명 : 서울드럼페스티벌</p>
+                    <p>축제 유형 : 문화예술</p>
+                    <p>개최 기간 : <br> 2024-08-08~ 2024-08-11</p>
+                    <button>더보기</button>
+                </div>
+                <div class="card">
+                    <h3>서울</h3>
+                    <p>축제명 : 서울뮤직페스티벌</p>
+                    <p>축제 유형 : 문화예술</p>
+                    <p>개최 기간 : <br> 2024-10-19 ~ 2024-10-21</p>
+                    <button>더보기</button>
+                </div>
+                <div class="card">
+                    <h3>서울</h3>
+                    <p>축제명 : 서울국악축제</p>
+                    <p>축제 유형 : 전통역사</p>
+                    <p>개최 기간 : <br> 2024-12-02 ~ 2024-12-04</p>
+                    <button>더보기</button>
+                </div>
+                <div class="card">
+                    <h3>서울</h3>
+                    <p>축제명 : 서울페스타 2024</p>
+                    <p>축제 유형 : 문화예술</p>
+                    <p>개최 기간 : <br> 2024-05-27 ~ 2024-05-29</p>
+                    <button>더보기</button>
+                </div>
             </div>
-            <div class="card">
-                <h3>서울</h3>
-                <p>축제명 : 서울드럼페스티벌</p>
-                <p>축제 유형 : 문화예술</p>
-                <p>개최 기간 : <br> 2024-08-08~ 2024-08-11</p>
-            </div>
-            <div class="card">
-                <h3>서울</h3>
-                <p>축제명 : 서울뮤직페스티벌</p>
-                <p>축제 유형 : 문화예술</p>
-                <p>개최 기간 : <br> 2024-10-19 ~ 2024-10-21</p>
-            </div>
-            <div class="card">
-                <h3>서울</h3>
-                <p>축제명 : 서울국악축제</p>
-                <p>축제 유형 : 전통역사</p>
-                <p>개최 기간 : <br> 2024-12-02 ~ 2024-12-04</p>
-            </div>
-            <div class="card">
-                <h3>서울</h3>
-                <p>축제명 : 서울페스타 2024</p>
-                <p>축제 유형 : 문화예술</p>
-                <p>개최 기간 : <br> 2024-05-27 ~ 2024-05-29</p>
-            </div>
-    
-            </div>
+        </div>
             <div class="btn_area">
                 <button class="prev">이전</button>
                 <button class="next">다음</button>
