--- a/Gwangju/best_festival/index.html
+++ b/Gwangju/best_festival/index.html
@@ -11,10 +11,16 @@
         <div class="search_area">
             <input type="text" name="" id="" placeholder="search">
             <select name="" id="">
-                <option value="광역자치 단체명">광역자치 단체명</option>
-                <option value="기초자치 단체명">기초자치 단체명</option>
-                <option value="축제유형">축제유형</option>
-                <option value="축제 시작일">축제 시작일</option>
+                <option value="광역자치 단체명" disabled selected>광역자치 단체명</option>
+            </select>
+            <select name="" id="">
+                <option value="기초자치 단체명" disabled selected>기초자치 단체명</option>
+            </select>
+            <select name="" id="">
+                <option value="축제유형" disabled selected>축제유형</option>
+            </select>
+            <select name="" id="">
+                <option value="축제 시작일" disabled selected>축제 시작일</option>
             </select>
         </div>
         <img src="maps/kr.svg" alt="">
