--- a/Gwangju/best_festival/index.html
+++ b/Gwangju/best_festival/index.html
@@ -8,9 +8,61 @@
 </head>
 <body>
     <h1 class="title">베스트 축제 섹션</h1>
-    <div class="festa_area">
-        <div class="festa_content">
-            <span class="close-button">&times;</span>
+    
+    <div class="content">
+        <input type="checkbox" name="modal" id="modal" hidden>
+
+        <div class="card">
+            <img src="images/CK_cm08188656_l.jpg" alt="">
+            <h3>서울드럼페스티벌</h3>
+            <p>기간 : 2024-08-08 ~ 20024-08-11</p>
+            <p>개최 장소 : 노들섬</p>
+            <p>좋아요 : 24개</p>
+            <label for="modal">더보기</label>
+        </div>
+        <div class="card">
+            <img src="images/CK_yaytg437359_l.jpg" alt="">
+            <h3>서울뮤직페스티벌</h3>
+            <p>기간 : 2024-10-19 ~ 20024-10-21</p>
+            <p>개최 장소 : 노들섬</p>
+            <p>좋아요 : 27개</p>
+            <button>더보기</button>
+        </div>
+        <div class="card">
+            <img src="images/CK_tc00240073292_l.jpg" alt="">
+            <h3>서울국악축제</h3>
+            <p>기간 : 2024-12-02 ~ 20024-12-04</p>
+            <p>개최 장소 : 미정</p>
+            <p>좋아요 : 22개</p>
+            <button>더보기</button>
+        </div>
+        <div class="card">
+            <img src="images/CK_tc02290001711_l.jpg" alt="">
+            <h3>서울페스타 2024</h3>
+            <p>기간 : 2024-05-27 ~ 20024-05-29</p>
+            <p>개최 장소 : 노들섬</p>
+            <p>좋아요 : 24개</p>
+            <button>더보기</button>
+        </div>
+        <div class="card">
+            <img src="images/CK_td01830000656_l.jpg" alt="">
+            <h3>서울 바비큐 페스티벌</h3>
+            <p>기간 : 2024-02-25 ~ 20024-02-28</p>
+            <p>개최 장소 : 노들섬</p>
+            <p>좋아요 : 24개</p>
+            <button>더보기</button>
+        </div>
+        <div class="card">
+            <img src="images/CK_yaytg1411834_l.jpg" alt="">
+            <h3>2024 한강 불빛 공연(드론 라이트 쇼)</h3>
+            <p>기간 : 2024-08-19 ~ 20024-08-21</p>
+            <p>개최 장소 : 한강공원</p>
+            <p>좋아요 : 26개</p>
+            <button>더보기</button>
+        </div>
+
+        <div class="festa_modal">
+            <label for="modal" class="close-button">&times;</label>
             <img src="images/CK_cm08188656_l.jpg" alt="">
             <h2>서울</h2>
             <p>축제 기간: 2024-08-08 ~ 2024-08-11</p>
@@ -22,82 +74,6 @@
             <p>담당자명: 이유빈</p>
             <p>담당자 연락처: 02-6222-0991</p>
             <p>2023년도 방문객 정보: <br> 내국인 수: 12500, 외국인 수: 0, 합계: 12500</p>
-            <div class='festa_btn_area'>
-                <button>좋아요</button>
-                <button>싫어요</button>
-                <button>내 여행 일정에 추가</button>
-            </div>
-        </div>
-        <div class="festa_content">
-            <span class="close-button">&times;</span>
-            <img src="images/CK_tc00360000007_l.jpg" alt="">
-            <h2>조선통신사축제</h2>
-            <p>축제 기간: 2024-02-05 ~ 2024-02-08</p>
-            <p>개최 장소: 광북로 일원</p>
-            <p>축제 개최조직: 부산문화재단</p>
-            <p>담당 지자체: 부산광역시</p>
-            <p>담당 부서: 문화유산과</p>
-            <p>담당자 직책: 주무관</p>
-            <p>담당자명: 송하은</p>
-            <p>담당자 연락처: 051-988-9164</p>
-            <p>2023년도 방문객 정보: <br> 내국인 수: 8000, 외국인 수: 2000, 합계: 10000</p>
-            <div class='festa_btn_area'>
-                <button>좋아요</button>
-                <button>싫어요</button>
-                <button>내 여행 일정에 추가</button>
-            </div>
-        </div>
-        <div class="festa_content">
-            <span class="close-button">&times;</span>
-            <img src="images/CK_cm260037211_l.jpg" alt="">
-            <h2>제46회 대구약령시한방문화축제</h2>
-            <p>축제 기간: 2024-07-10 ~ 2024-07-13</p>
-            <p>개최 장소: 대구약령시 일원</p>
-            <p>축제 개최조직: (사)약령시보존위원회</p>
-            <p>담당 지자체: 대구시청</p>
-            <p>담당 부서: 의료산업과</p>
-            <p>담당자 직책: 주무관</p>
-            <p>담당자명: 이유빈</p>
-            <p>담당자 연락처: 053-965-6397</p>
-            <p>2023년도 방문객 정보: <br> 내국인 수: 89607, 외국인 수: 0, 합계: 89607</p>
-            <div class='festa_btn_area'>
-                <button>좋아요</button>
-                <button>싫어요</button>
-                <button>내 여행 일정에 추가</button>
-            </div>
-        </div>
-        <div class="festa_content">
-            <span class="close-button">&times;</span>
-            <img src="images/CK_cm080900307_l.jpg" alt="">
-            <h2>시발</h2>
-            <p>축제 기간: 2024-08-02 ~ 2024-08-04</p>
-            <p>개최 장소: 충청남도 천안</p>
-            <p>축제 개최조직: 천안공고</p>
-            <p>담당 지자체: 웹디자인학과</p>
-            <p>담당 부서: 교무부</p>
-            <p>담당자 직책: 교장</p>
-            <p>담당자명: 김환희</p>
-            <p>담당자 연락처: 010-9284-1229</p>
-            <p>2023년도 방문객 정보: <br> 내국인 수: 0, 외국인 수: 99999, 합계: 99999</p>
-            <div class='festa_btn_area'>
-                <button>좋아요</button>
-                <button>싫어요</button>
-                <button>내 여행 일정에 추가</button>
-            </div>
-        </div>
-        <div class="festa_content">
-            <span class="close-button">&times;</span>
-            <img src="images/CK_cm280018353_l.jpg" alt="">
-            <h2>김환희 선생님</h2>
-            <p>축제 기간: 2024-08-25 ~ 2024-08-29</p>
-            <p>개최 장소: 경북</p>
-            <p>축제 개최조직: 전국기능경기대회</p>
-            <p>담당 지자체: 한국산업인력공단</p>
-            <p>담당 부서: 몰라</p>
-            <p>담당자 직책: 모르겠다고</p>
-            <p>담당자명: 가준호</p>
-            <p>담당자 연락처: 010-0000-0000</p>
-            <p>2023년도 방문객 정보: <br> 내국인 수: 25, 외국인 수: 1, 합계: 26</p>
             <div class='festa_btn_area'>
                 <button>좋아요</button>
                 <button>싫어요</button>
