--- a/Gyeonggi/A_module/index.html
+++ b/Gyeonggi/A_module/index.html
@@ -43,6 +43,7 @@
                     <h4>너도 될 수 있다.</h4>
                     <h1>저 하늘의 별</h1>
                 </div>
+                <div class="slide_num">3/3</div>
             </div>
             <div class="slide">
                 <img src="img/50.jpg" alt="">
@@ -50,6 +51,7 @@
                     <h4>너도 건널 수 있다.</h4>
                     <h1>삼도천</h1>
                 </div>
+                <div class="slide_num">1/3</div>
             </div>
             <div class="slide">
                 <img src="img/46.jpg" alt="">
@@ -57,6 +59,7 @@
                     <h4>너도 갈 수 있다.</h4>
                     <h1>저승</h1>
                 </div>
+                <div class="slide_num">2/3</div>
             </div>
             <div class="slide">
                 <img src="img/20.jpg" alt="">
@@ -64,6 +67,7 @@
                     <h4>너도 될 수 있다.</h4>
                     <h1>저 하늘의 별</h1>
                 </div>
+                <div class="slide_num">3/3</div>
             </div>
             <div class="slide">
                 <img src="img/50.jpg" alt="">
@@ -71,6 +75,7 @@
                     <h4>너도 건널 수 있다.</h4>
                     <h1>삼도천</h1>
                 </div>
+                <div class="slide_num">1/3</div>
             </div>
         </div>
     </div>
