test : Test notice area

--- a/Gyeonggi/A_module/index.html
+++ b/Gyeonggi/A_module/index.html
@@ -79,6 +79,49 @@
             </div>
         </div>
     </div>
-    
+    <div class="notice_area">
+        <div class="notice">
+            <h2>공지사항</h2>
+            <input type="radio" name="tab" id="tab01" hidden checked>
+            <label for="tab01">문화</label>
+            <input type="radio" name="tab" id="tab02" hidden>
+            <label for="tab02">교육</label>
+            <input type="radio" name="tab" id="tab03" hidden>
+            <label for="tab03">체험</label>
+
+            <div class="notice_box01">
+                <div class="notice_box">
+                    <div class="notice_list"><h4>사랑만 남기는 문화들</h4> <span>2024-05-02</span></div>
+                    <div class="notice_list"><h4>문화체험, 모든 것을 놀이 하듯이</h4> <span>2024-04-19</span></div>
+                    <div class="notice_list"><h4>함께하면 더욱 즐거운 문화축제</h4> <span>2024-03-15</span></div>
+                    <div class="notice_list"><h4>달빛과 함께 하는 문화축제</h4> <span>2024-02-25</span></div>
+                    <div class="notice_list"><h4>다시 도약하는 전통, 함께 즐기는 문화</h4> <span>2024-01-02</span></div>
+                </div>
+            </div>
+            <div class="notice_box02">
+                <div class="notice_box">
+                    <div class="notice_list"><h4>잊을 수 없는 역사, 그 날의 진실</h4> <span>2024-04-24</span></div>
+                    <div class="notice_list"><h4>재밌게 배우는 문화활동</h4> <span>2024-04-20</span></div>
+                    <div class="notice_list"><h4>더욱 생생하게, 현장체험실습</h4> <span>2024-03-21</span></div>
+                    <div class="notice_list"><h4>한국에는 이런 문화까지 있다</h4> <span>2024-02-29</span></div>
+                    <div class="notice_list"><h4>다시 시작하는 역사 돌아보기</h4> <span>2024-01-30</span></div>
+                </div>
+            </div>
+            <div class="notice_box03">
+                <div class="notice_box">
+                    <div class="notice_list"><h4>이렇게 다양한 우리 문화들</h4> <span>2024-04-29</span></div>
+                    <div class="notice_list"><h4>역사 속의 물건들 체험하기</h4> <span>2024-03-25</span></div>
+                    <div class="notice_list"><h4>모든게 새로워진 달빛기행 축제</h4> <span>2024-03-14</span></div>
+                    <div class="notice_list"><h4>100년전 그 날, 다시보는 과거</h4> <span>2024-03-10</span></div>
+                    <div class="notice_list"><h4>새로운 여행, 또 다른 시작</h4> <span>2024-01-31</span></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer></footer>
 </body>
 </html>
+
+<img src="img/28.png" alt="">
+            <img src="img/23.png" alt="">
+            <img src="img/29.png" alt="">
