--- a/Gyeonggi/A_module/index.html
+++ b/Gyeonggi/A_module/index.html
@@ -97,6 +97,7 @@
                     <div class="notice_list"><h4>달빛과 함께 하는 문화축제</h4> <span>2024-02-25</span></div>
                     <div class="notice_list"><h4>다시 도약하는 전통, 함께 즐기는 문화</h4> <span>2024-01-02</span></div>
                 </div>
+                <img src="img/28.jpg" alt="">
             </div>
             <div class="notice_box02">
                 <div class="notice_box">
@@ -106,6 +107,7 @@
                     <div class="notice_list"><h4>한국에는 이런 문화까지 있다</h4> <span>2024-02-29</span></div>
                     <div class="notice_list"><h4>다시 시작하는 역사 돌아보기</h4> <span>2024-01-30</span></div>
                 </div>
+                <img src="img/23.jpg" alt="">
             </div>
             <div class="notice_box03">
                 <div class="notice_box">
@@ -115,13 +117,10 @@
                     <div class="notice_list"><h4>100년전 그 날, 다시보는 과거</h4> <span>2024-03-10</span></div>
                     <div class="notice_list"><h4>새로운 여행, 또 다른 시작</h4> <span>2024-01-31</span></div>
                 </div>
+                <img src="img/29.png" alt="">
             </div>
         </div>
     </div>
     <footer></footer>
 </body>
 </html>
-
-<img src="img/28.png" alt="">
-            <img src="img/23.png" alt="">
-            <img src="img/29.png" alt="">
