--- a/Gyeonggi/A_module/index.html
+++ b/Gyeonggi/A_module/index.html
@@ -11,23 +11,23 @@
         <div class="logo">달빛기행축제</div>
         <nav>
             <ul class="main_menu">
-                <li>홈</li>
-                <li>소개
+                <li><a href="#">홈</a></li>
+                <li><a href="#">소개</a>
                     <ul class="sub_menu">
-                        <li>- 달빛기행축제란</li>
-                        <li>- 지역별 달빛기행축제 안내</li>
-                        <li>- 코스소개</li>
+                        <li><a href="#">- 달빛기행축제란</a></li>
+                        <li><a href="#">- 지역별 달빛기행축제 안내</a></li>
+                        <li><a href="#">- 코스소개</a></li>
                     </ul>
                 </li>
-                <li>참여/소식
+                <li><a href="#">참여/소식</a>
                     <ul class="sub_menu">
-                        <li>- 공지사항</li>
-                        <li>- 문화달력</li>
-                        <li>- 퀴즈 이벤트 참가</li>
+                        <li><a href="#">- 공지사항</a></li>
+                        <li><a href="#">- 문화달력</a></li>
+                        <li><a href="#">- 퀴즈 이벤트 참가</a></li>
                     </ul>
                 </li>
-                <li>예약하기</li>
-                <li>마이페이지</li>
+                <li><a href="#">예약하기</a></li>
+                <li><a href="#">마이페이지</a></li>
             </ul>
         </nav>
         <div class="sgin_area">
@@ -81,13 +81,14 @@
     </div>
     <div class="notice_area">
         <div class="notice">
-            <h2>공지사항</h2>
+            <h1>공지사항</h1>
             <input type="radio" name="tab" id="tab01" hidden checked>
             <label for="tab01">문화</label>
             <input type="radio" name="tab" id="tab02" hidden>
             <label for="tab02">교육</label>
             <input type="radio" name="tab" id="tab03" hidden>
             <label for="tab03">체험</label>
+            <div class="notice_back"></div>
 
             <div class="notice_box01">
                 <div class="notice_box">
@@ -97,7 +98,7 @@
                     <div class="notice_list"><h4>달빛과 함께 하는 문화축제</h4> <span>2024-02-25</span></div>
                     <div class="notice_list"><h4>다시 도약하는 전통, 함께 즐기는 문화</h4> <span>2024-01-02</span></div>
                 </div>
-                <img src="img/28.jpg" alt="">
+                <img src="img/10.jpg" alt="">
             </div>
             <div class="notice_box02">
                 <div class="notice_box">
