--- a/Gyeonggi/A_module/index.html
+++ b/Gyeonggi/A_module/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>달빛기행축제</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <body>
     <header>
         <div class="logo">달빛기행축제</div>
         <nav>
             <ul class="main_menu">
-                <li><a href="#">홈</a></li>
+                <li><a href="index.html">홈</a></li>
                 <li><a href="#">소개</a>
                     <ul class="sub_menu">
                         <li><a href="#">- 달빛기행축제란</a></li>
@@ -122,6 +123,41 @@
             </div>
         </div>
     </div>
-    <footer></footer>
+    <div class="gall_area">
+        <div class="gall_content">
+            <h1>갤러리</h1>
+            <div class="gall_container">
+                <div class="gall_img">
+                    <div class="gall_txt gall_txt01">
+                        <p>한밤의 달빛기행축제를 즐겨보세요!</p>
+                    </div>
+                    <img src="img/17.jpg" alt="">
+                </div>
+                <div class="gall_img">
+                    <img src="img/5.jpg" alt="">
+                    <div class="gall_txt gall_txt02">
+                        <p>더욱 아름다운 달빛기행축제!</p>
+                    </div>
+                </div>
+                <div class="gall_img">
+                    <img src="img/12.jpg" alt="">
+                    <div class="gall_txt gall_txt03">
+                        <p>경치가 아름다운 달빛기행축제와 함께해라!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer_area">
+        <footer>
+            <div class="footer_logo">달빛기행축제</div>
+            <div class="copy">© Moonlight Travel Festival all rights reserved.</div>
+            <div class="sns">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-x-twitter"></i>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
