docs : Add annotation

--- a/Gyeonggi/A_module/index.html
+++ b/Gyeonggi/A_module/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <body>
+    <!-- 헤더 영역 -->
     <header>
         <div class="logo">달빛기행축제</div>
         <nav>
@@ -15,7 +16,7 @@
                 <li><a href="index.html">홈</a></li>
                 <li><a href="#">소개</a>
                     <ul class="sub_menu">
-                        <li><a href="#">- 달빛기행축제란</a></li>
+                        <li><a href="sub01.html">- 달빛기행축제란</a></li>
                         <li><a href="#">- 지역별 달빛기행축제 안내</a></li>
                         <li><a href="#">- 코스소개</a></li>
                     </ul>
@@ -36,6 +37,8 @@
             <button class="join_btn">회원가입</button>
         </div>
     </header>
+    <!-- 헤더 영역 -->
+    <!-- 비주얼 영역 -->
     <div class="visual">
         <div class="slider">
             <div class="slide">
@@ -80,6 +83,8 @@
             </div>
         </div>
     </div>
+    <!-- 비주얼 영역 -->
+    <!-- 공지사항 영역 -->
     <div class="notice_area">
         <div class="notice">
             <h1>공지사항</h1>
@@ -123,6 +128,8 @@
             </div>
         </div>
     </div>
+    <!-- 공지사항 영역 -->
+    <!-- 갤러리 영역 -->
     <div class="gall_area">
         <div class="gall_content">
             <h1>갤러리</h1>
@@ -148,6 +155,8 @@
             </div>
         </div>
     </div>
+    <!-- 갤러리 영역 -->
+    <!-- 푸터 영역 -->
     <div class="footer_area">
         <footer>
             <div class="footer_logo">달빛기행축제</div>
@@ -159,5 +168,6 @@
             </div>
         </footer>
     </div>
+    <!-- 푸터 영역 -->
 </body>
 </html>
