--- a/Gyeonggi/A_module/sub01.html
+++ b/Gyeonggi/A_module/sub01.html
@@ -24,7 +24,7 @@
                 <li><a href="#">참여/소식</a>
                     <ul class="sub_menu">
                         <li><a href="#">- 공지사항</a></li>
-                        <li><a href="#">- 문화달력</a></li>
+                        <li><a href="sub02.html">- 문화달력</a></li>
                         <li><a href="#">- 퀴즈 이벤트 참가</a></li>
                     </ul>
                 </li>
