--- a/Daejeon/start/index.html
+++ b/Daejeon/start/index.html
@@ -9,43 +9,85 @@
 </head>
 <body>
     <div class="header_area">
-        <header>
-            <div class="logo">
-                <h1>경북그랜드 문화투어</h1>
-            </div>
-            <nav>
-                <ul class="main_menu">
-                    <li><a href="#">투어경북</a></li>
-                    <li><a href="#">숙박</a>
-                        <ul class="sub_menu">
-                            <li><a href="#">호텔</a></li>
-                            <li><a href="#">펜션</a></li>
-                            <li><a href="#">게스트하우스</a></li>
+        <div class="sgin_btn">
+            <div class="login_btn">로그인</div>
+            <div class="join_btn">회원가입</div>
+        </div>
+        <div class="header_content">
+            <header>
+                <div class="logo">
+                    <h1>경복그랜드문화투어</h1>
+                </div>
+                <nav>
+                    <ul class="main_menu">
+                        <li><a href="#">투어경북</a></li>
+                        <li><a href="#">숙박</a>
+                            <ul class="sub_menu">
+                                <li><a href="#">호텔</a></li>
+                                <li><a href="#">펜션</a></li>
+                                <li><a href="#">게스트하우스</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">문화유산</a>
+                            <ul class="sub_menu">
+                                <li><a href="#">세계문화유산</a></li>
+                                <li><a href="#">경주의역사</a></li>
+                                <li><a href="#">분류별역사</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">체험예약/안내</a>
+                            <ul class="sub_menu sub_menu04">
+                                <li><a href="#">체험예약</a></li>
+                                <li><a href="#">관광안내</a></li>
+                                <li><a href="#">주변관광지</a></li>
+                                <li><a href="#">문화재투어</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+                <input type="checkbox" id="nav" hidden>
+                <label class="ham" for="nav">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+                    </svg>
+                </label>
+                <div class="nav_modal">
+                    <div class="nav_back"></div>
+                    <div class="height_nav">
+                        <label for="nav">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+                            </svg>
+                        </label>
+                        <ul class="main_menu2">
+                            <li><a href="#">투어경북</a></li>
+                            <li><a href="#">숙박</a>
+                                <ul class="sub_menu2">
+                                    <li><a href="#">호텔</a></li>
+                                    <li><a href="#">펜션</a></li>
+                                    <li><a href="#">게스트하우스</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">문화유산</a>
+                                <ul class="sub_menu2">
+                                    <li><a href="#">세계문화유산</a></li>
+                                    <li><a href="#">경주의역사</a></li>
+                                    <li><a href="#">분류별역사</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">체험예약/안내</a>
+                                <ul class="sub_menu2 sub_menu04">
+                                    <li><a href="#">체험예약</a></li>
+                                    <li><a href="#">관광안내</a></li>
+                                    <li><a href="#">주변관광지</a></li>
+                                    <li><a href="#">문화재투어</a></li>
+                                </ul>
+                            </li>
                         </ul>
-                    </li>
-                    <li><a href="#">문화유산</a>
-                        <ul class="sub_menu">
-                            <li><a href="#">세계문화유산</a></li>
-                            <li><a href="#">경주의역사</a></li>
-                            <li><a href="#">분류별유산</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">체험예약 안내</a>
-                        <ul class="sub_menu">
-                            <li><a href="#">체험예약</a></li>
-                            <li><a href="#">관광안내</a></li>
-                            <li><a href="#">주변관광지</a></li>
-                            <li><a href="#">문화재투어</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-            <div class="btn_area">
-                <div class="login_btn">로그인</div>
-                <div class="join_btn">회원가입</div>
-            </div>
-            <div class="ham_btn"><i class="fa-solid fa-bars"></i></div>
-        </header>
+                    </div>
+                </div>
+            </header>
+        </div>
     </div>
     <div class="visual">
         <div class="slider">
