--- a/Daejeon/start/index.html
+++ b/Daejeon/start/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <!-- 헤더 영역 -->
     <div class="header_area">
         <div class="sgin_btn">
             <div class="login_btn">로그인</div>
@@ -89,6 +90,8 @@
             </header>
         </div>
     </div>
+    <!-- 헤더 영역 -->
+    <!-- 비주얼 영역 -->
     <div class="visual">
         <div class="slider">
             <div>
@@ -113,5 +116,97 @@
             </div>
         </div>
     </div>
+    <!-- 비주얼 영역 -->
+    <!-- 경북 베스트5 영역 -->
+    <div class="best5_area">
+        <h1>경북 BEST5</h1>
+        <div class="best5">
+            <div class="card">
+                <img src="경북best5/01_대릉원.jpg" alt="">
+                <div class="best5_txt">
+                    <h3>1. 대릉원</h3>
+                    <p>경주 대릉원은 경주시 노동동과 황남동에 있는 신라 시대의 고분군을 말하며 노동동 고분군, 노서리 고분군, 황남동 고분군, 황오동 고분군, 인왕동 고분군으로 구성되어 있다. </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="best5_txt">
+                    <h3>2. 도산서원</h3>
+                    <p>도산서원은 건축물 구성면으로 볼 때 크게 도산서당과 이를 아우르는 도산서원으로 구분된다. 도산서당은 퇴계선생이 몸소 거처하면서 제자들을 가르치던 곳이고, 도산서원은 퇴계선생 사후 건립되어 추증된 사당과 서원이다.  </p>
+                </div>
+                <img src="경북best5/02_도산서원.jpg" alt="">
+            </div>
+            <div class="card">
+                <img src="경북best5/03_울릉도.jpg" alt="">
+                <div class="best5_txt">
+                    <h3>3. 울릉도</h3>
+                    <p>우리나라에서 9번째 큰 섬인 울릉도는 화산활동에 의해 만들어진 대표적인 섬으로 본섬을 비롯한 유인도인 독도와 죽도 그리고 과거에는 주민이 살았으나 현재는 무인도인 관음도가 있고, 섬의 주변에는 삼선암, 딴 바위, 공암(코끼리바위), 북저바위 등의 크고 작은 암도를 포함한 44개의 부속도서로 이루어져 있다.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="best5_txt">
+                    <h3>4. 하회마을</h3>
+                    <p>하회마을은 풍산 류(柳)씨가 대대로 살아오던 전형적인 집성촌으로 한국 전통가옥의 미(美)가 살아 숨 쉬는 마을이다.
+                        조선시대의 대유학자 겸암 류운룡 선생과 서애 류성룡선생이 태어난 곳이기도 한 안동 하회마을은 1999년 4월 21일에는 방한 3일째였던 영국 엘리자베스 2세 여왕이 한국 전통의 고장으로서 방문하여 더욱 유명해졌다. </p>
+                </div>
+                <img src="경북best5/04_하회마을.jpg" alt="">
+            </div>
+            <div class="card">
+                <img src="경북best5/05_호미곶.jpg" alt="">
+                <div class="best5_txt">
+                    <h3>5. 호미곳</h3>
+                    <p>호미곶은 한반도의 최동단에 위치, 한반도 지형상 호랑이 꼬리에 해당하는 곳이다. 고산자 김정호는 대동여지도를 만들면서 이곳을 일곱 번이나 답사 측정한 뒤 우리나라의 가장 동쪽임을 확인하였다고 한다.  </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 경북 베스트5 영역 -->
+    <!-- 경북 투어 가이드 영역 -->
+    <div class="tour_guide_area">
+        <h1>경북 투어 가이드</h1>
+        <div class="tour_guide">
+            <div class="tour_img tour_img1">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam metus vitae urna finibus, et dapibus risus maximus. Duis nec posuere urna</p>
+                <img src="경북투어가이드/가야산만물상설경_성주.jpg" alt="">
+            </div>
+            <div class="tour_img tour_img2">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam metus vitae urna finibus, et dapibus risus maximus. Duis nec posuere urna</p>
+                <img src="경북투어가이드/가을양동마을_경주.jpg" alt="">
+            </div>
+            <div class="tour_img tour_img3">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam metus vitae urna finibus, et dapibus risus maximus. Duis nec posuere urna</p>
+                <img src="경북투어가이드/감물염색_청도.jpg" alt="">
+            </div>
+            <div class="tour_img tour_img4">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam metus vitae urna finibus, et dapibus risus maximus. Duis nec posuere urna</p>
+                <img src="경북투어가이드/감은사지_경주.jpg" alt="">
+            </div>
+            <div class="tour_img tour_img5">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam metus vitae urna finibus, et dapibus risus maximus. Duis nec posuere urna</p>
+                <img src="경북투어가이드/경정해변_영덕.jpg" alt="">
+            </div>
+            <div class="tour_img tour_img6">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam metus vitae urna finibus, et dapibus risus maximus. Duis nec posuere urna</p>
+                <img src="경북투어가이드/고추따는날.jpg" alt="">
+            </div>
+            <div class="tour_img tour_img7">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam metus vitae urna finibus, et dapibus risus maximus. Duis nec posuere urna</p>
+                <img src="경북투어가이드/두들마을일몰_영양.jpg" alt="">
+            </div>
+            <div class="tour_img tour_img8">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam metus vitae urna finibus, et dapibus risus maximus. Duis nec posuere urna</p>
+                <img src="경북투어가이드/병산서원_안동.jpg" alt="">
+            </div>
+            <div class="tour_img tour_img9">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam metus vitae urna finibus, et dapibus risus maximus. Duis nec posuere urna</p>
+                <img src="경북투어가이드/보문산의벚꽃엔딩야경.jpg" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- 경북 투어 가이드 영역 -->
+    <!-- 푸터 영역 -->
+    <footer>
+
+    </footer>
+    <!-- 푸터 영역 -->
 </body>
 </html>
