feat : Create performance exhibition information area

--- a/Daejeon/start/index.html
+++ b/Daejeon/start/index.html
@@ -203,6 +203,56 @@
         </div>
     </div>
     <!-- 경북 투어 가이드 영역 -->
+    <!-- 이달의 공연/전시 안내 영역 -->
+    <div class="schedule_area">
+        <h1>이달의 공연/전시</h1>
+        <div class="schedule">
+            <div class="card2">
+                <div class="img_box">포스터 미등록</div>
+                <div class="schedule_date"><span>안동시</span> <p>2024. 08. 06</p></div>
+                <div class="schedule_title">하회별신굿탈놀이</div>
+            </div>
+            <div class="card2">
+                <div class="img_box">포스터 미등록</div>
+                <div class="schedule_date"><span>포항시</span> <p>2024. 08. 07</p></div>
+                <div class="schedule_title">호미곶한민족해맞이축전</div>
+            </div>
+            <div class="card2">
+                <div class="img_box">포스터 미등록</div>
+                <div class="schedule_date"><span>문경시</span> <p>2024. 08. 10</p></div>
+                <div class="schedule_title">문경찻사발축제</div>
+            </div>
+            <div class="card2">
+                <div class="img_box"><img src="이달의공연전시/01.jpg" alt=""></div>
+                <div class="schedule_date"><span>청도군</span> <p>2024. 08. 17</p></div>
+                <div class="schedule_title">청도 프로방스 빛축제</div>
+            </div>
+            <div class="card2">
+                <div class="img_box">포스터 미등록</div>
+                <div class="schedule_date"><span>영덕군</span> <p>2024. 08. 18</p></div>
+                <div class="schedule_title">영덕대게축제</div>
+            </div>
+            <div class="card2">
+                <div class="img_box">포스터 미등록</div>
+                <div class="schedule_date"><span>고령군</span> <p>2024. 08. 21</p></div>
+                <div class="schedule_title">고령대가야축제</div>
+            </div>
+            <div class="card2">
+                <div class="img_box">포스터 미등록</div>
+                <div class="schedule_date"><span>포항시</span> <p>2024. 08. 22</p></div>
+                <div class="schedule_title">마켓피어나인</div>
+            </div>
+            <div class="card2">
+                <div class="img_box"><img src="이달의공연전시/02.jpg" alt=""></div>
+                <div class="schedule_date"><span>칠곡군</span> <p>2024. 08. 23</p></div>
+                <div class="schedule_title">가산산성 문화유산 야행</div>
+            </div>
+        </div>
+    </div>
+    <!-- 이달의 공연/전시 안내 영역 -->
+    <!-- 경북관광갤러리 영역 -->
+    
+    <!-- 경북관광갤러리 영역 -->
     <!-- 푸터 영역 -->
     <footer>
 
