feat : Gallery area

--- a/Daejeon/start/index.html
+++ b/Daejeon/start/index.html
@@ -251,7 +251,42 @@
     </div>
     <!-- 이달의 공연/전시 안내 영역 -->
     <!-- 경북관광갤러리 영역 -->
-    
+    <div class="gall_area">
+        <h1>갤러리</h1>
+        <div class="gall">
+            <div class="box">
+                <img src="./갤러리/01_스페이스워크/01_스페이스워크.jpg" alt="">
+                <img src="./갤러리/01_스페이스워크/02_스페이스워크.jpg" alt="">
+                <img src="./갤러리/01_스페이스워크/03_스페이스워크.jpg" alt="">
+                <div class="gall_txt">
+                    <h1>스페이스워크</h1>
+                    <p>“시간과 공간의 마법에 걸리다”
+                    “Space Walk”는 우주선을 벗어나 우주를 유영하는, 혹은 공간을 걷는 이라는 이중적 의미를 지닌다.</p>
+                    <button>자세히보기</button>
+                </div>
+            </div>
+            <div class="box">
+                <img src="./갤러리/02_은어다리/01_은어다리.jpg" alt="">
+                <img src="./갤러리/02_은어다리/02_은어다리.jpg" alt="">
+                <img src="./갤러리/02_은어다리/03_은어다리.jpg" alt="">
+                <div class="gall_txt">
+                    <h1>은어다리</h1>
+                    <p>울진 여행 코스 중 야경 명소로 유명한 아름다운 교각으로 꼽힌다.</p>
+                    <button>자세히보기</button>
+                </div>
+            </div>
+            <div class="box">
+                <img src="./갤러리/03_연화지/01_연화지.jpg" alt="">
+                <img src="./갤러리/03_연화지/02_연화지.jpg" alt="">
+                <img src="./갤러리/03_연화지/03_연화지.jpg" alt="">
+                <div class="gall_txt">
+                    <h1>연화지</h1>
+                    <p>김천 연화지는 맑은 연못과 수많은 벚꽃이 어우러져  많은 사람에게 특별히 더 사랑을 받고 있는 곳이다.</p>
+                    <button>자세히보기</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- 경북관광갤러리 영역 -->
     <!-- 푸터 영역 -->
     <footer>
