feat : Create cultural festival poster area

--- a/Daejeon/start/index.html
+++ b/Daejeon/start/index.html
@@ -288,6 +288,43 @@
         </div>
     </div>
     <!-- 경북관광갤러리 영역 -->
+    <!-- 문화축제영역 -->
+    <div class="festa_area">
+        <h1>문화 축제 포스터</h1>
+        <div class="festa">
+            <div class="festa_box">
+                <img src="./문화축제/축제1.jpg" alt="">
+            </div>
+            <div class="festa_box">
+                <img src="./문화축제/축제2.jpg" alt="">
+            </div>
+            <div class="festa_box">
+                <img src="./문화축제/축제3.jpg" alt="">
+            </div>
+            <div class="festa_box">
+                <img src="./문화축제/축제4.jpg" alt="">
+            </div>
+            <div class="festa_box">
+                <img src="./문화축제/축제5.jpg" alt="">
+            </div>
+            <div class="festa_box">
+                <img src="./문화축제/축제6.jpg" alt="">
+            </div>
+            <div class="festa_box">
+                <img src="./문화축제/축제7.jpg" alt="">
+            </div>
+            <div class="festa_box">
+                <img src="./문화축제/축제8.jpg" alt="">
+            </div>
+            <div class="festa_box">
+                <img src="./문화축제/축제9.jpg" alt="">
+            </div>
+            <div class="festa_box">
+                <img src="./문화축제/축제10.jpg" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- 문화축제영역 -->
     <!-- 푸터 영역 -->
     <footer>
 
