--- a/Daejeon/start/index.html
+++ b/Daejeon/start/index.html
@@ -326,9 +326,22 @@
     </div>
     <!-- 문화축제영역 -->
     <!-- 푸터 영역 -->
-    <footer>
-
-    </footer>
+    <div class="footer_area">
+        <footer>
+            <div class="footer_txt">
+                <p>경상북도 안동시 풍천면 도청대로 455 관광문의(경상북도관광홍보관) : 054-745-0753</p>
+                <p>e-mail : gbnadri@gmail.com 홈페이지문의(경상북도관광공사) : 070-4820-6437</p>
+                <p>관광자료신청 : 054-678-5430</p>
+                <p>경북투어문의 : 054-678-5432</p>
+                <p>Copyright ⓒ 2020 Gyeongsangbuk-do all rights reserved.</p>
+            </div>
+            <div class="icon">
+                <img src="./푸터/insta.png" alt="">
+                <img src="./푸터/youtube.png" alt="">
+                <img src="./푸터/twit.png" alt="">
+            </div>
+        </footer>
+    </div>
     <!-- 푸터 영역 -->
 </body>
 </html>
