test : Add a link and search input

--- a/Daejeon/start/index.html
+++ b/Daejeon/start/index.html
@@ -11,6 +11,9 @@
     <!-- 헤더 영역 -->
     <div class="header_area">
         <div class="sgin_btn">
+            <div class="search">
+                <input type="text" name="" id="" placeholder="search">
+            </div>
             <div class="login_btn">로그인</div>
             <div class="join_btn">회원가입</div>
         </div>
@@ -21,7 +24,7 @@
                 </div>
                 <nav>
                     <ul class="main_menu">
-                        <li><a href="#">투어경북</a></li>
+                        <li><a href="sub.html">투어경북</a></li>
                         <li><a href="#">숙박</a>
                             <ul class="sub_menu">
                                 <li><a href="#">호텔</a></li>
@@ -61,7 +64,7 @@
                             </svg>
                         </label>
                         <ul class="main_menu2">
-                            <li><a href="#">투어경북</a></li>
+                            <li><a href="sub.html">투어경북</a></li>
                             <li><a href="#">숙박</a>
                                 <ul class="sub_menu2">
                                     <li><a href="#">호텔</a></li>
