docs : Update file

--- a/Daejeon/start/index.html
+++ b/Daejeon/start/index.html
@@ -42,7 +42,7 @@
                         <li><a href="#">체험예약/안내</a>
                             <ul class="sub_menu sub_menu04">
                                 <li><a href="#">체험예약</a></li>
-                                <li><a href="#">관광안내</a></li>
+                                <li><a href="keword.html">관광안내</a></li>
                                 <li><a href="#">주변관광지</a></li>
                                 <li><a href="#">문화재투어</a></li>
                             </ul>
@@ -82,7 +82,7 @@
                             <li><a href="#">체험예약/안내</a>
                                 <ul class="sub_menu2 sub_menu04">
                                     <li><a href="#">체험예약</a></li>
-                                    <li><a href="#">관광안내</a></li>
+                                    <li><a href="keword.html">관광안내</a></li>
                                     <li><a href="#">주변관광지</a></li>
                                     <li><a href="#">문화재투어</a></li>
                                 </ul>
