--- a/Daejeon/start/keword.html
+++ b/Daejeon/start/keword.html
@@ -94,64 +94,9 @@
         </div>
     </div>
     <!-- 헤더 영역 -->
-    <!-- 투어경북 소개 영역-->
-    <div class="introduce_area">
-        <div class="introduce">
-            <input type="radio" name="introduce" id="introduce01" hidden checked>
-            <label for="introduce01">전체</label>
-            <input type="radio" name="introduce" id="introduce02" hidden>
-            <label for="introduce02">산</label>
-            <input type="radio" name="introduce" id="introduce03" hidden>
-            <label for="introduce03">호수</label>
-            <input type="radio" name="introduce" id="introduce04" hidden>
-            <label for="introduce04">바다</label>
-            <input type="radio" name="introduce" id="introduce05" hidden>
-            <label for="introduce05">문화유산</label>
-
-            <div class="introduce_box introduce_box01">
-                <img src="images/image (5).jpg" alt="">
-                <img src="images/image (6).jpg" alt="">
-                <img src="images/image (10).jpg" alt="">
-                <img src="images/image (50).jpg" alt="">
-                <img src="images/image (63).jpg" alt="">
-                <img src="images/image (58).jpg" alt="">
-                <img src="images/image (74).jpg" alt="">
-                <img src="images/image (71).jpg" alt="">
-                <img src="images/image (69).jpg" alt="">
-                <img src="images/image (68).jpg" alt="">
-                <img src="images/image (66).jpg" alt="">
-                <img src="images/image (65).jpg" alt="">
-                <img src="images/image (1).jpg" alt="">
-                <img src="images/image (16).jpg" alt="">
-                <img src="images/image (25).jpg" alt="">
-            </div>
-            <div class="introduce_box introduce_box02">
-                <img src="images/image (5).jpg" alt="">
-                <img src="images/image (6).jpg" alt="">
-                <img src="images/image (10).jpg" alt="">
-                <img src="images/image (50).jpg" alt="">
-                <img src="images/image (63).jpg" alt="">
-            </div>
-            <div class="introduce_box introduce_box03">
-                <img src="images/image (58).jpg" alt="">
-                <img src="images/image (74).jpg" alt="">
-            </div>
-            <div class="introduce_box introduce_box04">
-                <img src="images/image (71).jpg" alt="">
-                <img src="images/image (69).jpg" alt="">
-                <img src="images/image (68).jpg" alt="">
-                <img src="images/image (66).jpg" alt="">
-                <img src="images/image (65).jpg" alt="">
-
-            </div>
-            <div class="introduce_box introduce_box05">
-                <img src="images/image (1).jpg" alt="">
-                <img src="images/image (16).jpg" alt="">
-                <img src="images/image (25).jpg" alt="">
-            </div>
-        </div>
-    </div>
-    <!-- 투어경북 소개 영역 -->
+    <!-- 키워드 영역 -->
+    
+    <!-- 키워드 영역 -->
     <!-- 푸터 영역 -->
     <div class="footer_area">
         <footer>
