--- a/Daejeon/start/keword.html
+++ b/Daejeon/start/keword.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>경북그랜드 문화투어</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="keword.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -95,7 +95,13 @@
     </div>
     <!-- 헤더 영역 -->
     <!-- 키워드 영역 -->
-    
+    <div class="window_area">
+        <div class="window">
+            <div id="word-cloud"></div>
+            <div class="popup" id="popup"></div>
+        </div>
+    </div>
+    <div id="table-container"></div>
     <!-- 키워드 영역 -->
     <!-- 푸터 영역 -->
     <div class="footer_area">
@@ -115,5 +121,6 @@
         </footer>
     </div>
     <!-- 푸터 영역 -->
+    <script src="index.js"></script>
 </body>
 </html>
