feat : Update keword style

--- a/Daejeon/start/keword.html
+++ b/Daejeon/start/keword.html
@@ -100,8 +100,11 @@
             <div id="word-cloud"></div>
             <div class="popup" id="popup"></div>
         </div>
+        <div class="table_area">
+            <div id="table-container"></div>
+        </div>
     </div>
-    <div id="table-container"></div>
+
     <!-- 키워드 영역 -->
     <!-- 푸터 영역 -->
     <div class="footer_area">
