feat : Create visual area

--- a/Gwangju/start/index.html
+++ b/Gwangju/start/index.html
@@ -55,6 +55,43 @@
         </div>
     </div>
     <!-- 회원가입 모달 -->
-
+    <!-- Up comming 축제 섹션 영역 -->
+    <div class="visual">
+        <div class="slider">
+            <div class="slide">
+                <img src="images/CK_cm08506465_l.jpg" alt="">
+                <div class="slide_txt">
+                    <h1>벚꽃 축제</h1>
+                    <p>장소 : 경주, 축제 기간 : 2024.04.01 ~ 2024.05.02</p>
+                </div>
+                <button>내 여행일 정에 추가</button>
+            </div>
+            <div class="slide">
+                <img src="images/CK_tc00240010719_l.jpg" alt="">
+                <div class="slide_txt">
+                    <h1>오리보트 축제</h1>
+                    <p>장소 : 경주, 축제 기간 : 2024.07.01 ~ 2024.08.14</p>
+                </div>
+                <button>내 여행일 정에 추가</button>
+            </div>
+            <div class="slide">
+                <img src="images/CK_yaytg1739986_l.jpg" alt="">
+                <div class="slide_txt">
+                    <h1>불꽃놀이 축제</h1>
+                    <p>장소 : 경주, 축제 기간 : 2024.10.01 ~ 2024.10.31</p>
+                </div>
+                <button>내 여행일 정에 추가</button>
+            </div>
+            <div class="slide">
+                <img src="images/CK_cm08506465_l.jpg" alt="">
+                <div class="slide_txt">
+                    <h1>벚꽃 축제</h1>
+                    <p>장소 : 경주, 축제 기간 : 2024.04.01 ~ 2024.05.02</p>
+                </div>
+                <button>내 여행일 정에 추가</button>
+            </div>
+        </div>
+    </div>
+    <!-- Up comming 축제 섹션 영역 -->
 </body>
 </html>
