feat : Create top btn

--- a/Gwangju/start/index.html
+++ b/Gwangju/start/index.html
@@ -10,7 +10,8 @@
     <input type="checkbox" id="login" hidden>
     <input type="checkbox" id="join" hidden>
     <!-- 헤더 영역 -->
-    <div class="header_area">
+    <a href="#top"><button class="top_btn">></button></a>
+    <div class="header_area" id="top">
         <header>
             <div class="logo">
                 <h1><a href="#">문화관광포털</a></h1>
