--- a/Gwangju/start/sub01.html
+++ b/Gwangju/start/sub01.html
@@ -14,7 +14,7 @@
     <div class="header_area" id="top">
         <header>
             <div class="logo">
-                <h1><a href="#">문화관광포털</a></h1>
+                <h1><a href="index.html">문화관광포털</a></h1>
             </div>
             <nav>
                 <ul class="main_menu">
@@ -61,114 +61,25 @@
     <div class="best_festa_area">
         <h1>Best Festival</h1>
         <div class="best_festa">
-            <div class="festa_card">
-                <img src="images/CK_tc02730000863_l.jpg" alt="">
-                <div class="festa_txt">
-                    <h3>2024 책읽는 한강공원</h3>
-                    <p>기간 : 2024-10-01 ~ 2024-10-04</p>
-                    <p>개최 장소 : 강서한강공원 여의도한강공원</p>
-                    <p>좋아요 : 30개</p>
-                    <label for="festa">더보기</label>
-                </div>
-            </div>
-            <div class="festa_card">
-                <img src="images/CK_tc02290001711_l.jpg" alt="">
-                <div class="festa_txt">
-                    <h3>서울페스타 2024</h3>
-                    <p>기간 : 2024-05-27 ~ 2024-05-29</p>
-                    <p>개최 장소 : 서울광장 광화문광장 등 서울 전역</p>
-                    <p>좋아요 : 29개</p>
-                    <span>더보기</span>
-                </div>
-            </div>
-            <div class="festa_card">
-                <img src="images/CK_yaytg1739986_l.jpg" alt="">
-                <div class="festa_txt">
-                    <h3>한강페스티벌</h3>
-                    <p>기간 : 2024-09-09 ~ 2024-09-12</p>
-                    <p>개최 장소 : 한강 수상 및 11개 한강공원 일대</p>
-                    <p>좋아요 : 28개</p>
-                    <span>더보기</span>
-                </div>
-            </div>
-            <div class="festa_card">
-                <img src="images/CK_yaytg437359_l.jpg" alt="">
-                <div class="festa_txt">
-                    <h3>서울뮤직페스티벌</h3>
-                    <p>기간 : 2024-10-19 ~ 2024-10-21</p>
-                    <p>개최 장소 : 노들섬</p>
-                    <p>좋아요 : 27개</p>
-                    <span>더보기</span>
-                </div>
-            </div>
-            <div class="festa_card">
-                <img src="images/CK_yaytg1411834_l.jpg" alt="">
-                <div class="festa_txt">
-                    <h3>2024 한강 불빛 공연(드론 라이트 쇼)</h3>
-                    <p>기간 : 2024-08-19 ~ 2024-0-21</p>
-                    <p>개최 장소 : 한강공원</p>
-                    <p>좋아요 : 26개</p>
-                    <span>더보기</span>
-                </div>
-            </div>
-            <div class="festa_card">
-                <img src="images/CK_td02240014986_l.jpg" alt="">
-                <div class="festa_txt">
-                    <h3>2024 서울세계도시문화축제</h3>
-                    <p>기간 : 2024-06-30 ~ 2024-07-03</p>
-                    <p>개최 장소 : 광화문광장 및 청계광장 일원</p>
-                    <p>좋아요 : 25개</p>
-                    <span>더보기</span>
-                </div>
-            </div>
-            <div class="festa_card">
-                <img src="images/CK_cm08188656_l.jpg" alt="">
-                <div class="festa_txt">
-                    <h3>서울드럼페스티벌</h3>
-                    <p>기간 : 2024-08-08 ~ 2024-08-11</p>
-                    <p>개최 장소 : 노들섬</p>
-                    <p>좋아요 : 24개</p>
-                    <span>더보기</span>
-                </div>
-            </div>
-            <div class="festa_card">
-                <img src="images/CK_pc001023491_l.jpg" alt="">
-                <div class="festa_txt">
-                    <h3>2024년 추석 농수특산물 서울장터</h3>
-                    <p>기간 : 2024-02-01 ~ 2024-02-03</p>
-                    <p>개최 장소 : 서울광장</p>
-                    <p>좋아요 : 23개</p>
-                    <span>더보기</span>
-                </div>
-            </div>
-            <div class="festa_card">
-                <img src="images/CK_tc00240073292_l.jpg" alt="">
-                <div class="festa_txt">
-                    <h3>서울국악축제</h3>
-                    <p>기간 : 2024-12-02 ~ 2024-12-04</p>
-                    <p>개최 장소 : 미정</p>
-                    <p>좋아요 : 22개</p>
-                    <span>더보기</span>
-                </div>
-            </div>
+            <!-- 카드 생성 -->
         </div>
     </div>
     <!-- 축제 모달창 -->
     <div class="festa_modal_back">
         <div class="festa_modal">
-            <img src="images/CK_tc02730000863_l.jpg" alt="">
+            <img src="" alt="">
             <div class="festa_modal_txt">
-                <label for="festa">닫기</label>
-                <h1>2024 책읽는 한강공원</h1>
-                <p>축제 기간 : 2024-10-01 ~ 2024-10-04</p>
-                <p>개최 장소 : 강서한강공원 여의도한강공원</p>
-                <p>축제 개최조직 : 해당없음</p>
-                <p>담당 지자체 : 서울시 미래한강본부</p>
-                <p>담당 부서 : 한강문화관광과</p>
-                <p>담당자 직책 : 주무관</p>
-                <p>담당자명 : 윤민재</p>
-                <p>담당자 연락처 : 02-6041-3189</p>
-                <p>2024년 방문객 정보 : <br> 내국인 수 : 246293, 외국인 수 : 0, 합계 : 246293</p>
+                <span class="close_modal">닫기</span>
+                <h1></h1>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
                 <div>
                     <button>좋아요</button>
                     <button>싫어요</button>
@@ -203,5 +114,6 @@
         </footer>
     </div>
     <!-- 푸터 영역 -->
+    <script src="index.js"></script>
 </body>
 </html>
