--- a/Gwangju/start/sub02.html
+++ b/Gwangju/start/sub02.html
@@ -14,7 +14,7 @@
     <div class="header_area" id="top">
         <header>
             <div class="logo">
-                <h1><a href="#">문화관광포털</a></h1>
+                <h1><a href="index.html">문화관광포털</a></h1>
             </div>
             <nav>
                 <ul class="main_menu">
