--- a/Gwangju/B_festival_search/index.html
+++ b/Gwangju/B_festival_search/index.html
@@ -34,6 +34,6 @@
             <button class="next" id="nextButton" disabled>다음</button>
         </div>
     </div>
-    <script src="index.js" defer></script>
+    <script src="index.js"></script>
 </body>
 </html>
