--- a/Gwangju/start/sub01.html
+++ b/Gwangju/start/sub01.html
@@ -114,6 +114,6 @@
         </footer>
     </div>
     <!-- 푸터 영역 -->
-    <script src="index.js"></script>
+    <script src="sub01.js"></script>
 </body>
 </html>
